--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
   margin:0;
   padding:0;
   height:100vh;
-  background: url('https://i.ibb.co/Mk1tyd0q/IMG-1274.gif') no-repeat center center fixed;
+  background: url('https://i.postimg.cc/m2nVRp0j/IMG-1272.gif') no-repeat center center fixed;
   background-size: cover;
   color:#fff;
   text-align:center;
