--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ async function sendFlex(){
 
   const flexMsg = {
     type:"flex",
-    altText:"FLEX ฟรี สนใจติดต่อ",
+    altText:"สนใจติดต่อ_lineid: mc357.com",
     contents:{
       type:"bubble",
       hero:{
